--- a/home2016.css
+++ b/home2016.css
@@ -28,114 +28,10 @@ Wednesday 06, April, 2016
 
 .rowdygray:hover { background: #646366; color: #fff !important; }
 
-.turquoise-f { color: red !important; }
-
-.turquoise { background: #1ABC9C; }
-
-.turquoise:hover { background: #17a689; }
-
-.greensea { background: #16A085; color: #fff !important; }
-
-.greensea:hover { background: #138a72; color: #fff !important; }
-
-.emerald { background: #2ECC71; color: #fff !important; }
-
-.emerald:hover { background: #29b765; color: #fff !important; }
-
-.nephritis { background: #27AE60; color: #fff !important; }
-
-.nephritis:hover { background: #295; color: #fff !important; }
-
-.peterriver { background: #3498DB; color: #fff !important; }
-
-.peterriver:hover { background: #258cd1; color: #fff !important; }
-
-.belizehole { background: #2980B9; color: #fff !important; }
-
-.belizehole:hover { background: #2472a4; color: #fff !important; }
-
-.amethyst { background: #9B59B6; color: #fff !important; }
-
-.amethyst:hover { background: #8f4bab; color: #fff !important; }
-
-.wisteria { background: #8E44AD; color: #fff !important; }
-
-.wisteria:hover { background: #7f3d9b; color: #fff !important; }
-
-.wetasphalt { background: #34495E; color: #fff !important; }
-
-.wetasphalt:hover { background: #34495e; color: #fff !important; }
-
-.midnightblue { background: #2C3E50; color: #fff !important; }
-
-.midnightblue:hover { background: #4f6f8f; color: #fff !important; }
-
-.sunflower { background: #F1C40F; color: #fff !important; }
-
-.sunflower:hover { background: #dfb50d; color: #fff !important; }
-
-.orange { background: #F39C12; color: #fff !important; }
-
-.orange:hover { background: #e6910c; color: #fff !important; }
-
-.carrot { background: #E67E22; color: #fff !important; }
-
-.carrot:hover { background: #dc7419; color: #fff !important; }
-
-.pumpkin { background: #D35400; color: #fff !important; }
-
-.pumpkin:hover { background: #fa6400; color: #fff !important; }
-
-.alizarin { background: #E74C3C; color: #fff !important; }
-
-.alizarin:hover { background: #e02e1c; color: #fff !important; }
-
-.pomegranate { background: #C0392B; color: #fff !important; }
-
-.pomegranate:hover { background: #c0392b; color: #fff !important; }
-
-.clouds { background: #ECF0F1; color: #000 !important; }
-
-.clouds:hover { background: #67848b; color: #000 !important; }
-
-.silver { background: #BDC3C7; color: #000 !important; }
-
-.silver:hover { background: #6a757d; color: #000 !important; }
-
-.asbestos { background: #7F8C8D; color: #000 !important; }
-
-.asbestos:hover { background: #6c7879; color: #000 !important; }
-
-.concrete { background: #95A5A6; color: #000 !important; }
-
-.concrete:hover { background: #637576; color: #000 !important; }
-
-.darkgray { background: #333; }
-
-.lightgray { background: #bcbaba; }
-
-.white { background: #fff; color: #000; }
-
-.black { background: #000; color: #fff; }
-
-.contentlink { background: #1b557a; }
-
-.rowdyblue { background: #00447c; color: #fff !important; }
-
-.rowdyblue:hover { background: #003663; color: #fff !important; }
-
-.rowdyred { background: #c50f3c; color: #fff !important; }
-
-.rowdyred:hover { background: #ad0d35; color: #fff !important; }
-
-.rowdygray { background: #717073; color: #fff !important; }
-
-.rowdygray:hover { background: #646366; color: #fff !important; }
-
 /* Toolbar Styles */
 .toolbar { z-index: 9999; background: #fff; }
 
-.toolbar .quicktools { font-size: 16px; text-align: left; padding-left: 15px; }
+.toolbar .quicktools { font-size: 16px; }
 
 .toolbar a.navbar-brand:hover { color: #003663; }
 
@@ -153,11 +49,7 @@ Wednesday 06, April, 2016
 
 .toolbar li.active a { background: #ecf0f1 !important; color: #333 !important; }
 
-.nav-social { border-bottom: 48px solid #d11242; border-left: 35px solid transparent; border-right: 0px solid transparent; height: 0; }
-
-.nav-social > a > i.fa { color: white; font-size: 18px; padding: 15px 10px; }
-
-.navbar { min-height: 46px; border-radius: 0 !important; margin-bottom: 0; }
+.navbar { border-radius: 0 !important; margin-bottom: 0; }
 
 .navbar-nav { margin: 0; }
 
@@ -171,30 +63,6 @@ Wednesday 06, April, 2016
 
 .dropdown-menu { padding-left: 10px; padding-right: 10px; }
 
-.caret-up { width: 0; height: 0; border-left: 4px solid transparent; border-right: 4px solid transparent; border-bottom: 4px solid; display: inline-block; margin-left: 2px; vertical-align: middle; }
-
-@media only screen and (max-width: 320px) { .navbar-brand { height: 53px; } }
-
-@media only screen and (max-width: 767px) { .nav-social { background: #d11242; } }
-
-@media only screen and (min-width: 768px) { .nav-social { border-bottom: 48px solid #d11242; border-left: 35px solid transparent; border-right: 0 solid transparent; height: 0; }
-  .navbar .navbar-nav { display: inline-block; float: none; margin-bottom: -2px; }
-  .navbar .navbar-nav > .quicktools { display: inline-block; float: none; margin-bottom: -2px; }
-  ul.dropdown-menu > li a { padding-top: 0; }
-  ul.dropdown-menu > li a { font-family: sans-serif; }
-  ul.nav.navbar-nav.navbar-center { list-style: none !important; margin: auto !important; width: -webkit-fit-content; width: -moz-fit-content; width: fit-content; float: none; display: inline-block; } }
-
-@media screen and (min-width: 992px) { .toolbar-background { background: #d11242; overflow: hidden; position: relative; }
-  .toolbar-background .background { display: block; position: absolute; left: 0px; width: 50%; height: 100%; background-color: white; }
-  .toolbar-background .container { background: white; padding-left: 0px; padding-right: 0px; } }
-
-@media only screen and (max-width: 1200px) { .toolbar-background > .container { width: 100%; }
-  .navbar .navbar-collapse { text-align: center; } }
-
-@media only screen and (min-width: 1200px) { .navbar-collapse { padding-right: 0; padding-left: 0; }
-  .nav-social { text-align: right !important; padding-right: 0px; } }
-
-/* mainBlueNavigation Styles */
 .mainBlueNavigation { background: #00447c; }
 
 .mainBlueNavigation ul li a { color: #fff !important; }
@@ -207,17 +75,27 @@ Wednesday 06, April, 2016
 
 .caret-up { width: 0; height: 0; border-left: 4px solid transparent; border-right: 4px solid transparent; border-bottom: 4px solid; display: inline-block; margin-left: 2px; vertical-align: middle; }
 
+.msudenver_logo img { width: 115px; margin: 10px; }
+
 @media only screen and (max-width: 320px) { .navbar-brand { height: 53px; } }
 
-@media only screen and (min-width: 768px) { .mainBlueNavigation { background: url("media/assets/homepagespring2016/home_headerbg.jpg") no-repeat; background-size: cover; }
+@media only screen and (max-width: 767px) { .nav-social { background: #d11242; } }
+
+@media only screen and (min-width: 768px) { .navbar .navbar-collapse { text-align: center; }
+  .nav-social { border-bottom: 48px solid #d11242; border-left: 35px solid transparent; border-right: 0 solid transparent; height: 0; }
+  .navbar .navbar-nav > .quicktools { display: inline-block; float: none; margin-bottom: -2px; }
+  .navbar .navbar-collapse { text-align: center; }
+  .mainBlueNavigation { background: url("/media/assets/homepagespring2016/home_headerbg.jpg") no-repeat; background-size: cover; }
   .mainBlueNavigation ul li a { color: #fff !important; font-size: 1.2em; font-weight: 100; font-family: 'Fjalla One', sans-serif; padding-top: 20px !important; padding-bottom: 15px !important; }
   ul.dropdown-menu > li a { padding-top: 0; }
   ul.dropdown-menu > li a { font-family: sans-serif; }
   ul.nav.navbar-nav.navbar-center { list-style: none !important; margin: auto !important; width: -webkit-fit-content; width: -moz-fit-content; width: fit-content; float: none; display: inline-block; } }
 
-@media screen and (min-width: 992px) { .mainBlueNavigation ul li a { padding-top: 70px !important; margin: 0 15px 0 10px; } }
+@media screen and (min-width: 992px) { .msudenver_logo img { width: 165px; margin: 15px 25px; }
+  .mainBlueNavigation ul li a { padding-top: 70px !important; } }
 
-@media only screen and (min-width: 1200px) { .mainBlueNavigation ul li a { font-size: 1.5em; } }
+@media only screen and (min-width: 1200px) { .mainBlueNavigation ul li a { font-size: 1.5em; }
+  .navbar-collapse { padding-right: 0; padding-left: 0; } }
 
 /* Carousel Styles */
 #slider > a.left.carousel-control, #slider > a.right.carousel-control { color: #fff; }
@@ -226,17 +104,11 @@ Wednesday 06, April, 2016
 
 .carousel-control.left { background: none !important; width: 80px; text-align: right; text-shadow: none !important; }
 
-.carousel-control { opacity: 0.0; }
-
 .fa-inverse { color: #003879 !important; }
 
-.fa-lg { font-size: 1.8em; }
+.fa-lg { font-size: 1.3em; }
 
-.carousel-inner > .item > a > img, .carousel-inner > .item > img { line-height: 1; margin: auto; width: 100%; }
-
-#carousel-homepage > .carousel-control { opacity: 0.0; -webkit-transition: 0.5s ease-in-out; -moz-transition: 0.5s ease-in-out; -o-transition: 0.5s ease-in-out; transition: 0.5s ease-in-out; }
-
-#carousel-homepage:hover > .carousel-control { opacity: 0.5; -webkit-transition: 0.5s ease-in-out; -moz-transition: 0.5s ease-in-out; -o-transition: 0.5s ease-in-out; transition: 0.5s ease-in-out; }
+.carousel-inner > .item > img { margin: auto; }
 
 .item { overflow: hidden; }
 
@@ -266,17 +138,23 @@ Wednesday 06, April, 2016
 
 .caption-reverse > .caption-readmore hr { border-top: 1px solid #003879 !important; }
 
-.firstheight img { display: none; }
+@media screen and (max-width: 768px) { .carousel-control { position: absolute; margin-top: 13%; opacity: 0.8; } }
 
 @media only screen and (min-width: 768px) { .carousel-indicators { bottom: 10px; width: 200px; right: 0; left: inherit; }
-  .carousel-control { position: absolute; top: 30%; }
+  .fa-lg { font-size: 1.8em; }
+  .carousel-control { position: absolute; top: 24%; opacity: 0.8; }
   .carousel-caption > h2 { font-size: 32px; }
   .carousel-caption > h3 { font-size: 23px; line-height: 30px; } }
 
 @media screen and (min-width: 992px) { .carousel { margin-bottom: 15px; }
+  .carousel-control { position: absolute; top: 44%; opacity: 0.0; }
   .calls-to-action > h3 > a { font-size: 1.5em; }
   .carousel-indicators { bottom: 10px; width: 200px; right: 0; left: inherit; }
-  .carousel-caption { position: absolute; right: 100%; left: 0; width: 50%; padding: 15px 30px; background: rgba(0, 68, 124, 0.9); } }
+  .carousel-caption { position: absolute; right: 100%; left: 0; width: 50%; padding: 15px 30px; background: rgba(0, 68, 124, 0.9); }
+  #carousel-homepage:hover > .carousel-control { opacity: 0.8; -webkit-transition: 0.9s ease-out; -moz-transition: 0.9s ease-out; -o-transition: 0.9s ease-out; transition: 0.9s ease-out; } }
+
+@media screen and (min-width: 1200px) { .carousel-control { position: absolute; top: 44%; opacity: 0.0; }
+  #carousel-homepage:hover > .carousel-control { opacity: 0.8; -webkit-transition: 0.9s ease-out; -moz-transition: 0.9s ease-out; -o-transition: 0.9s ease-out; transition: 0.9s ease-out; } }
 
 .footer { display: block; min-height: 20px; padding: 20px; background: #003663; margin-left: 0; margin-right: 0; }
 
@@ -284,16 +162,10 @@ Wednesday 06, April, 2016
 
 .campus-info { border: 0; border-bottom: 1px solid white; margin-bottom: 15px; }
 
-.college-portrait { float: right; }
-
-.footer .fa-2x { font-size: 1.75em; }
-
-.footer .fa { padding: 0px 5px; }
-
 @media only screen and (min-width: 768px) { .campus-info { border: 0; border-right: 1px solid white; border-bottom: 0; margin-bottom: 0; } }
 
 /* Calls to action */
-.calls-to-action { padding: 25px; background: url("media/assets/homepagespring2016/calltoactbg.png") no-repeat; background-size: cover; background-color: rgba(52, 152, 219, 0.72); margin-bottom: 15px; }
+.calls-to-action { padding: 25px; background: url("/media/assets/homepagespring2016/calltoactbg.png") no-repeat; background-size: cover; background-color: rgba(52, 152, 219, 0.72); margin-bottom: 15px; }
 
 .calls-to-action > hr { border-top: 1px solid rgba(255, 255, 255, 0.2); margin-top: 15px; margin-bottom: 15px; }
 
@@ -305,13 +177,26 @@ Wednesday 06, April, 2016
 
 @media screen and (min-width: 992px) { .calls-to-action > h3 > a { font-size: 1.5em; } }
 
+/* Panel Styles */
+.panel { border: 0; border-radius: 0; }
+
+.panel-heading { border-radius: 0; }
+
+.panel-default { border: 1px solid #1b557a; }
+
+.panel-default > .panel-heading { background: #1b557a; color: #fff; font-size: 1.5em; border-color: #1b557a; }
+
+.panel-title { color: #fff; }
+
+.clickable.col-lg-12.col-lg-6, .clickable.col-xs-6.col-sm-6.col-md-6.col-lg-3 { padding: 0.25em; }
+
 #layout, #menu, .menu-link { -webkit-transition: all 0.2s ease-out; -moz-transition: all 0.2s ease-out; -ms-transition: all 0.2s ease-out; -o-transition: all 0.2s ease-out; transition: all 0.2s ease-out; }
 
 #layout { z-index: 9998; padding-left: 200px; left: 0; top: 100px; }
 
-.nav-social { text-align: center !important; padding-right: 0px; }
+.custombtn { border-radius: 0; margin-bottom: 15px; width: 100%; font-weight: 100 !important; box-shadow: 1px 5px 5px rgba(0, 0, 0, 0.175); }
 
-.carousel-inner > .item > a > img, .carousel-inner > .item > img { line-height: 1; margin: auto; width: 100%; }
+.custombtn span { color: #FFF; }
 
 .ie8 .img-responsive { display: block; height: auto; max-width: 100%; vertical-align: middle; border: 0; -ms-interpolation-mode: bicubic; }
 
@@ -346,8 +231,6 @@ h4 { color: #3498db; font-size: 18px; font-weight: 500; line-height: 1.3; }
 h5 { color: #2c3e50; font-size: 16px; font-weight: 500; }
 
 h6 { color: #e74c3c; font-size: 13px; font-weight: 500; }
-
-.msudenver_logo { max-width: 216px; padding: 15px; }
 
 .readmore { text-align: right; margin-top: 10px; }
 
@@ -409,5 +292,4 @@ p.event-home-date { color: gray; font-size: 1.2em; font-weight: bold; }
 
 @media only screen and (min-width: 768px) { #layout { padding: 0; margin: 0 auto; left: 0; }
   #menu { position: relative; left: 0; padding: 0; margin: 0 auto; width: 100%; }
-  .header { text-align: left; }
-  .navbar .navbar-collapse { text-align: center; } }
+  .header { text-align: left; } }
