--- a/app/ContentTypes/_footer.scss
+++ b/app/ContentTypes/_footer.scss
@@ -77,6 +77,9 @@
     .social-mobile i {
       display: none;
     }
+    .campus-info {
+      padding-top: 25px;
+    }
 }
 
 @media only screen and (max-width: 1199px) {
@@ -96,5 +99,8 @@
       border-right: 1px solid white;
       border-bottom: 0;
       margin-bottom: 0;
+  }
+  .campus-info {
+    padding-top: 0px;
   }
 }
