--- a/home2016.css
+++ b/home2016.css
@@ -304,12 +304,14 @@ Wednesday 06, April, 2016
 
 @media only screen and (min-width: 768px) { .hide-hr { display: none; }
   .mobile-msuinfo-show { display: none; }
-  .social-mobile i { display: none; } }
+  .social-mobile i { display: none; }
+  .campus-info { padding-top: 25px; } }
 
 @media only screen and (max-width: 1199px) { .campus-info { border: 0; border-bottom: none; margin-bottom: 15px; }
   .social-mobile i { text-align: center; } }
 
-@media only screen and (min-width: 1200px) { .campus-info { border: 0; border-right: 1px solid white; border-bottom: 0; margin-bottom: 0; } }
+@media only screen and (min-width: 1200px) { .campus-info { border: 0; border-right: 1px solid white; border-bottom: 0; margin-bottom: 0; }
+  .campus-info { padding-top: 0px; } }
 
 /* Calls to action */
 .calls-to-action { padding: 25px; background: url("media/assets/homepagespring2016/calltoactbg.png") no-repeat; background-size: cover; background-color: rgba(52, 152, 219, 0.72); margin-bottom: 15px; }
