--- a/main2016.css
+++ b/main2016.css
@@ -1816,6 +1816,9 @@ h3 {
   .social-mobile i {
     display: none;
   }
+  .campus-info {
+    padding-top: 25px;
+  }
 }
 
 @media only screen and (max-width: 1199px) {
@@ -1835,6 +1838,9 @@ h3 {
     border-right: 1px solid white;
     border-bottom: 0;
     margin-bottom: 0;
+  }
+  .campus-info {
+    padding-top: 0px;
   }
 }
 
