--- a/app/ContentTypes/_footer.scss
+++ b/app/ContentTypes/_footer.scss
@@ -91,12 +91,16 @@
   .social-mobile i {
     text-align:center;
   }
+  .footer-logo {
+    padding-top: 10px;
+  }
 }
 
 @media only screen and (min-width: 1200px) {
   .campus-info {
       border: 0;
-      border-right: 1px solid white;
+      // border-right: 1px solid white;
+      border-right: 0px solid white;
       border-bottom: 0;
       margin-bottom: 0;
   }
