--- a/home2016.css
+++ b/home2016.css
@@ -308,9 +308,10 @@ Wednesday 06, April, 2016
   .campus-info { padding-top: 25px; } }
 
 @media only screen and (max-width: 1199px) { .campus-info { border: 0; border-bottom: none; margin-bottom: 15px; }
-  .social-mobile i { text-align: center; } }
+  .social-mobile i { text-align: center; }
+  .footer-logo { padding-top: 10px; } }
 
-@media only screen and (min-width: 1200px) { .campus-info { border: 0; border-right: 1px solid white; border-bottom: 0; margin-bottom: 0; }
+@media only screen and (min-width: 1200px) { .campus-info { border: 0; border-right: 0px solid white; border-bottom: 0; margin-bottom: 0; }
   .campus-info { padding-top: 0px; } }
 
 /* Calls to action */
