--- a/app/ContentTypes/_carousel.scss
+++ b/app/ContentTypes/_carousel.scss
@@ -128,7 +128,16 @@
 .firstheight img {
     display: none;
 }
-@media screen and (max-width: 768px) { .carousel-control { position: absolute; margin-top: 13%; opacity: 0.8; } }
+@media screen and (max-width: 768px)
+{ .carousel-control {
+  position: absolute;
+  margin-top: 13%;
+  opacity: 0.8;
+  }
+  .carousel-caption {
+    height:180px;
+  }
+ }
 @media only screen and (min-width: 768px) {
 
     .carousel-indicators {
