--- a/home2016.css
+++ b/home2016.css
@@ -266,7 +266,7 @@ Wednesday 06, April, 2016
 
 .firstheight img { display: none; }
 
-@media screen and (max-width: 768px) { .carousel-control { position: absolute; margin-top: 13%; opacity: 0.8; } }
+@media screen and (max-width: 768px) { .carousel-control { position: absolute; margin-top: 13%; opacity: 0.8; }
 
 @media only screen and (min-width: 768px) { .carousel-indicators { bottom: 10px; width: 200px; right: 0; left: inherit; }
   .carousel-control { position: absolute; top: 30%; }
