--- a/app/styles/ContentTypes/_MainHeaderNavigation.scss
+++ b/app/styles/ContentTypes/_MainHeaderNavigation.scss
@@ -1,4 +1,16 @@
-/* Toolbar Styles */
+/* MainHeaderNavigation Styles */
+
+.navbar-header {
+  background: rgba(0, 68, 124, 1);
+}
+
+.navbar .navbar-collapse {
+    text-align: center;
+}
+
+.navbar-inner {
+    text-align: center;
+}
 
 .toolbar {
     z-index: 9999;
@@ -46,20 +58,6 @@
     color: #333!important;
 }
 
-.nav-social {
-    border-bottom: 48px solid #d11242;
-    border-left: 35px solid transparent;
-    border-right: 0px solid transparent;
-    height: 0;
-}
-
-  .nav-social>a>i.fa {
-    color: white;
-    font-size: 18px;
-    padding: 15px 10px;
-}
-
-
 .navbar {
     min-height: 46px;
     border-radius: 0!important;
@@ -85,42 +83,47 @@
     padding-left: 10px;
     padding-right: 10px;
 }
-.caret-up {
-    width: 0;
-    height: 0;
-    border-left: 4px solid rgba(0, 0, 0, 0);
-    border-right: 4px solid rgba(0, 0, 0, 0);
-    border-bottom: 4px solid;
-    display: inline-block;
-    margin-left: 2px;
-    vertical-align: middle;
+
+
+.msudenver_logo {
+    padding: 15px;
+}
+
+.custom-search-input {
+    margin-top: 5px;
+    height: 40px;
+    padding: 3px;
+    border: solid 1px #E4E4E4;
+    border-radius: 6px;
+    background-color: #fff;
+}
+.custom-search-input input {
+    border: 0;
+    box-shadow: none;
+}
+.custom-search-input button {
+    margin: 2px 0 0;
+    background: none;
+    box-shadow: none;
+    border: 0;
+    color: #003663;
+    padding: 0 8px 0 10px;
+    border-left: solid 1px #ccc;
+}
+.custom-search-input button:hover {
+    border: 0;
+    box-shadow: none;
+    border-left: solid 1px #ccc;
+    background: none;
+    color: #d11242;
 }
 
 @media only screen and (max-width: 320px) {
-    .navbar-brand {
-        height: 53px;
-    }
-    .container-fluid {
-
-    };
 
 }
-@media only screen and (max-width: 767px) {
-    .nav-social {
-        background: #d11242;
-    }
 
-}
 
 @media only screen and (min-width: 768px) {
-
-    .nav-social {
-        border-bottom: 48px solid #d11242;
-        border-left: 35px solid transparent;
-        border-right: 0 solid transparent;
-        height: 0;
-    }
-
     .navbar .navbar-nav {
         display: inline-block;
         float: none;
@@ -134,9 +137,7 @@
     ul.dropdown-menu > li a {
         padding-top: 0;
     }
-    ul.dropdown-menu > li a {
-        font-family: sans-serif;
-    }
+
     ul.nav.navbar-nav.navbar-center {
         list-style: none !important;
         margin: auto !important;
@@ -149,42 +150,7 @@
 }
 
 @media screen and (min-width: 992px) {
-  .toolbar-background {
-      background: #d11242;
-      overflow: hidden;
-      position: relative;
-  }
 
-  .toolbar-background .background {
-      display: block;
-      position: absolute;
-      left: 0px;
-      width: 50%;
-      height: 100%;
-      background-color: white;
-  }
-  .toolbar-background .container {
-      background: white;
-      padding-left:0px;
-      padding-right:0px;
-  }
 }
-
 @media only screen and (max-width:1200px){
-
-  .toolbar-background > .container {
-      width: 100%;
-  }
-}
-@media only screen and (min-width:1200px) {
-    .navbar-collapse {
-        padding-right: 0;
-        padding-left: 0;
-    }
-
-    .nav-social {
-        text-align: right !important;
-        padding-right: 0px;
-    }
-
 }
