--- a/app/styles/main2016.scss
+++ b/app/styles/main2016.scss
@@ -8,7 +8,7 @@
 
 !!! */
 
-
+@import "MainHeaderNavigation";
 @import "ContentTypes/variables";
 @import "ContentTypes/content";
 @import "ContentTypes/navmenu";
@@ -19,7 +19,6 @@
 @import "ContentTypes/hero";
 @import "ContentTypes/newsroom";
 @import "ContentTypes/panel";
-@import "ContentTypes/toolbar";
 @import "ContentTypes/footer";
 @import "ContentTypes/SiteHeader";
 @import "ContentTypes/stylestoimport";
