--- a/app/styles/ContentTypes/_MainHeaderNavigation.scss
+++ b/app/styles/ContentTypes/_MainHeaderNavigation.scss
@@ -88,7 +88,7 @@ li.dropdown {
   font-size: 20px;
   color: #00447c;
   margin-top: 15px;
-  padding: 5px 40px 5px 40px;
+  padding: 5px 25px 5px 25px;
   border-right: 2px solid #c3e6fb;
   font-weight: 900;
 }
@@ -100,6 +100,47 @@ li.dropdown.last {
 .nav > li > a {
   display: inline;
   line-height: 30px;
+}
+
+.glyphicon-search {
+    color: #027EC3 !important;
+    padding-top: 20px;
+    font-size: 30px;
+}
+
+#content-nav #search-input {
+    display: none;
+    position: relative;
+    bottom: 46px;
+}
+#content-nav #search-input div {
+    padding-right: 0 !important;
+    top: 3px !important;
+}
+#content-nav #search-input input[type=text] {
+    display: inline-block;
+    height: 32px;
+    width: 900px; /* was 900px */
+    border: none;
+    color: grey;
+    border: 2px solid #fff;
+    border-radius: 2px;
+    background-color: #E9EDF1;
+}
+#content-nav #search-input .button {
+    display: inline-block;
+    padding-left: 6px;
+    top: -32px;
+    left: 808px; /*was 808px */
+    position: relative;
+    height: 30px;
+    width: 90px;
+    background-color: #fff;
+    color: #9c5fb5;
+    border-radius: 0;
+}
+#content-nav #search-input .button:hover {
+    color: #cdadd9;
 }
 
 .apply-button {
