--- a/development/lib/bootstrap-sass/assets/stylesheets/bootstrap/_msu-variables.scss
+++ b/development/lib/bootstrap-sass/assets/stylesheets/bootstrap/_msu-variables.scss
@@ -15,7 +15,7 @@ $gray:                   lighten($gray-base, 33.5%) !default; // #555
 $gray-light:             lighten($gray-base, 46.7%) !default; // #777
 $gray-lighter:           lighten($gray-base, 93.5%) !default; // #eee
 
-$brand-primary:         darken(#428bca, 6.5%) !default; // #337ab7
+$brand-primary:         #003a6e !default; // ##003a6e
 $brand-success:         #5cb85c !default;
 $brand-info:            #5bc0de !default;
 $brand-warning:         #f0ad4e !default;
@@ -48,7 +48,7 @@ $font-family-sans-serif:  "Raleway", "Helvetica Neue", Helvetica, Arial, sans-se
 $font-family-serif:       "Karla", "Georgia", "Times New Roman", Times, serif !default;
 //** Default monospace fonts for `<code>`, `<kbd>`, and `<pre>`.
 $font-family-monospace:   Menlo, Monaco, Consolas, "Courier New", monospace !default;
-$font-family-base:        $font-family-sans-serif !default;
+$font-family-base:        $font-family-serif !default;
 
 $font-size-base:          14px !default;
 $font-size-large:         ceil(($font-size-base * 1.25)) !default; // ~18px
