--- a/development/terminalfour/src/html/includes/header.html
+++ b/development/terminalfour/src/html/includes/header.html
@@ -1,7 +1,7 @@
   <!-- Global Header -->
     <div class="navbar navbar-fixed-top toolbar blue-header">
       <div class="header-container">
-        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+        <button type="search-button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
           <span class="sr-only">Toggle quick links navigation</span>
           <span class="fa fa-bars"></span>
         </button>
