--- a/development/terminalfour/src/sass/msu-partials/_global-header.scss
+++ b/development/terminalfour/src/sass/msu-partials/_global-header.scss
@@ -453,6 +453,7 @@
     padding-left: 0px;
     width: 101%;
     text-align: left;
+    padding-top: 4.1em;
   }
   .left-addon input {
     padding-top: 5px !important;
@@ -629,8 +630,6 @@
 
 .header-container {
     @include container-fixed();
-    padding-bottom: 30px;
-
 }
 
 @media (min-width: $screen-sm-min) {
