--- a/www-root/style-assets/css/style.css
+++ b/www-root/style-assets/css/style.css
@@ -7860,6 +7860,7 @@ header {
     padding-left: 0px;
     width: 101%;
     text-align: left;
+    padding-top: 4.1em;
   }
 
   .left-addon input {
@@ -8045,7 +8046,6 @@ header {
   margin-left: auto;
   padding-left: 15px;
   padding-right: 15px;
-  padding-bottom: 30px;
 }
 .header-container:before, .header-container:after {
   content: " ";
