--- a/development/terminalfour/src/sass/ContentTypes/_SiteHeader.scss
+++ b/development/terminalfour/src/sass/ContentTypes/_SiteHeader.scss
@@ -6,13 +6,23 @@
             text-decoration: none;
         }
     }
-}
-
 .siteheader {
-  margin-top: 15px;
-
   color: #fff;
   // border-bottom: 2px solid #cc2951;
+}
+
+.breadcrumb {
+  background-color: rgba(255, 255, 255, 0);
+  border-radius: 0;
+  padding: 0;
+}
+ul.breadcrumb {
+  // color: #fff;
+  font-family: 'Karla', Open Sans, helvetica, arial, sans-serif;
+  font-size: 1em;
+}
+ul.breadcrumb a {
+  color: #fff
 }
 
 @media (max-width: 767px) {
@@ -21,4 +31,5 @@
     text-align: right;
     padding-right: 10px;
   }
+}
 }
