--- a/www-root/style-assets/css/inner-style.css
+++ b/www-root/style-assets/css/inner-style.css
@@ -10549,18 +10549,28 @@ div#lhnContainerDone {
 #site-header a:hover, #site-header a:active, #site-header a:focus {
   text-decoration: none;
 }
-
-.siteheader {
-  margin-top: 15px;
+#site-header .siteheader {
   color: #fff;
 }
-
+#site-header .breadcrumb {
+  background-color: rgba(255, 255, 255, 0);
+  border-radius: 0;
+  padding: 0;
+}
+#site-header ul.breadcrumb {
+  font-family: 'Karla', Open Sans, helvetica, arial, sans-serif;
+  font-size: 1em;
+}
+#site-header ul.breadcrumb a {
+  color: #fff;
+}
 @media (max-width: 767px) {
-  .siteheader {
+  #site-header .siteheader {
     text-align: right;
     padding-right: 10px;
   }
 }
+
 body {
   margin-top: 70px;
   font-family: 'Karla', Open Sans, helvetica, arial, sans-serif;
@@ -10700,21 +10710,6 @@ h6 {
   color: #e74c3c;
   font-size: 13px;
   font-weight: 500;
-}
-
-.breadcrumb {
-  background-color: rgba(255, 255, 255, 0);
-  border-radius: 0;
-}
-
-ul.breadcrumb {
-  color: #fff;
-  font-family: 'Karla', Open Sans, helvetica, arial, sans-serif;
-  font-size: 1em;
-}
-
-ul.breadcrumb a {
-  color: #fff;
 }
 
 .readmore {
